data/derived/fa15/progs/unify/prog2629.ml.out
Characters 81-118:
  else loop ((digitsOfInt(sumList(digitsOfInt x))) + y) in
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
